--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     "webpack-node-externals": "^1.2.0"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.3",
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "sails-mongo": "^0.12.0",
     "socket.io": "^1.4.5",
     "waterline": "^0.12.1"
   }
