--- a/package.json
+++ b/package.json
@@ -17,7 +17,18 @@
   },
   "homepage": "https://github.com/AndreyGermanov/wab3",
   "devDependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-forever-monitor": "0.0.3",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-react": "^3.1.0",
+    "ignore-loader": "^0.1.1",
+    "readdirp": "^2.0.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-node-externals": "^1.2.0"
@@ -26,11 +37,13 @@
     "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sails-mongo": "^0.12.0",
+    "sha1": "^1.1.1",
     "socket.io": "^1.4.5",
     "waterline": "^0.12.1"
   }
