--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "express-socket.io-session": "^1.3.1",
+    "ip": "^1.1.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sails-mongo": "^0.12.0",
