--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "async": "^2.0.0-rc.3",
     "body-parser": "^1.15.0",
+    "connect": "^3.4.1",
+    "cookie": "^0.2.3",
     "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
@@ -47,6 +49,7 @@
     "sails-mongo": "^0.12.0",
     "sha1": "^1.1.1",
     "socket.io": "^1.4.5",
+    "socket.io-express-session": "^0.1.3",
     "waterline": "^0.12.1"
   }
 }
