--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "passport-local": "^1.0.0",
     "sails-mongo": "^0.12.0",
     "sha1": "^1.1.1",
+    "smtp-connection": "^2.4.0",
     "socket.io": "^1.4.5",
     "socket.io-express-session": "^0.1.3",
+    "validator": "^5.2.0",
     "waterline": "^0.12.1"
   }
 }
