--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-forever-monitor": "0.0.3",
+    "gulp-mocha": "^2.2.0",
     "gulp-preprocess": "^2.0.0",
     "gulp-react": "^3.1.0",
     "ignore-loader": "^0.1.1",
@@ -46,11 +47,14 @@
     "ip": "^1.1.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "rc-tree": "^1.3.0",
+    "react": "^15.0.2",
     "sails-mongo": "^0.12.0",
     "sha1": "^1.1.1",
     "smtp-connection": "^2.4.0",
     "socket.io": "^1.4.5",
     "socket.io-express-session": "^0.1.3",
+    "treeview-react-bootstrap": "^0.4.5",
     "validator": "^5.2.0",
     "waterline": "^0.12.1"
   }
