--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,27 @@
-buildscript {
-    ext.kotlin_version = '1.3.10'
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.3.10'
+    id 'application'
+}
+
+allprojects {
     repositories {
-        mavenCentral()
+        jcenter()
     }
+
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        compile('org.jetbrains.kotlin:kotlin-stdlib-jdk8')
+        testImplementation('org.jetbrains.kotlin:kotlin-test')
+        testImplementation('org.jetbrains.kotlin:kotlin-test-junit')
+        compile('io.javalin:javalin:2.3.0')
+        compile('org.slf4j:slf4j-simple:1.7.25')
+        compile('com.google.firebase:firebase-admin:6.6.0')
+        compile('org.mongodb:mongodb-driver-sync:3.8.2')
+        compile('com.google.code.gson:gson:2.8.5')
+        compile('net.objecthunter:exp4j:0.4.8')
+        compile('mysql:mysql-connector-java:8.0.12')
+        compile('commons-net:commons-net:3.6')
     }
-}
 
-apply plugin: 'kotlin'
-apply plugin: 'application'
-
-mainClassName = 'hello.HelloKt'
-
-defaultTasks 'run'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    testCompile 'junit:junit:4.11'
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-}
-
-jar {
-    manifest { attributes 'Main-Class': 'hello.HelloKt' }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    // Define the main class for the application
+    mainClassName = 'wab3.AppKt'
 }
